fix: wrapps isnavbarfixed in useMemo

--- a/src/pages/sevan2023/Navbar/styles.css
+++ b/src/pages/sevan2023/Navbar/styles.css
@@ -14,7 +14,7 @@
   position: sticky;
   top: 0;
   left: auto;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .navbar-left {
